# prometheus-speedtest-exporter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs  metrics.rs  speedtest.rs
tests/: test_data.json
