[package]
name = "prometheus-speedtest-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
axum = "0.7.6"
pretty_env_logger = "0.5.0"
prometheus = "0.13.4"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
